fix: spacing and coloring

--- a/packages/blog-app/assets/css/globals.css
+++ b/packages/blog-app/assets/css/globals.css
@@ -8,7 +8,7 @@
 
   --very-dark-neutral: #081b22;
   --dark-neutral: #1a2a37;
-  --slightly-dark-neutral: #272f3a;
+  --slightly-dark-neutral: #aaaaaa;
   --neutral: #e5eeed;
   --light-neutral: #fafafa;
   --very-light-neutral: #ffffff;
